Correct Resources dropdown display on mobile

--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -514,32 +514,43 @@ div.nuvlabox.odd {
 .dropdown-menu {
 	min-width: 100px;
 }
+
 .dropdown-menu.columns-2 {
 	min-width: 300px;
 }
+
 .dropdown-menu.columns-3 {
 	min-width: 450px;
 }
+
 .dropdown-menu li a {
 	padding: 5px 15px;
 	font-weight: 300;
 }
+
 .multi-column-dropdown {
 	list-style: none;
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
 .multi-column-dropdown li a {
 	display: block;
 	clear: both;
 	line-height: 1.428571429;
 	color: #333;
 	white-space: normal;
+	color: #bababa;
 }
+
 .multi-column-dropdown li a:hover {
 	text-decoration: none;
 	color: #262626;
 	background-color: #f5f5f5;
+}
+
+.multi-column-dropdown li strong {
+	color: #bababa;
 }
 
 @media (max-width: 767px) {
